force-app/main/default/objects/ssot__BudgetAllocation__dlm/fields/ssot__BudgetCategoryValueId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BudgetCategoryValueId__c</fullName>
    <label>Budget Category Value</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BudgetCategoryValueId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>