force-app/main/default/objects/ssot__BudgetAllocation__dlm/fields/ssot__rel_1716726627696_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726627696_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BudgetAllocation_BudgetCategoryValue_rel</label>
    <referenceTo>ssot__BudgetCategoryValue__dlm</referenceTo>
    <relationshipLabel>BudgetAllocation_BudgetCategoryValue_rel</relationshipLabel>
    <relationshipName>rel_1716726627696_end</relationshipName>
    <type>Lookup</type>
</CustomField>