force-app/main/default/objects/ssot__BudgetAllocation__dlm/fields/ssot__rel_1716726640554_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726640554_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BudgetAllocation_BudgetId_map_Budget_rel</label>
    <referenceTo>ssot__Budget__dlm</referenceTo>
    <relationshipLabel>BudgetAllocation_BudgetId_map_Budget_rel</relationshipLabel>
    <relationshipName>rel_1716726640554_end</relationshipName>
    <type>Lookup</type>
</CustomField>